RESOLVED FIXED305360
Stretch images instead of tiling them on macOS as well as iOS
https://bugs.webkit.org/show_bug.cgi?id=305360
Summary Stretch images instead of tiling them on macOS as well as iOS
Simon Fraser (smfr)
Reported 2026-01-12 21:02:37 PST
Remove one of the `#if PLATFORM(IOS_FAMILY)` in `Image::drawTiled()`.
Attachments
Radar WebKit Bug Importer
Comment 1 2026-01-12 21:02:43 PST
Simon Fraser (smfr)
Comment 2 2026-01-12 21:05:26 PST
EWS
Comment 3 2026-01-13 13:19:33 PST
Committed 305528@main (b828cfef0763): <https://commits.webkit.org/305528@main> Reviewed commits have been landed. Closing PR #56475 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.