Stretch images instead of tiling them on macOS as well as iOS https://bugs.webkit.org/show_bug.cgi?id=305360 rdar://168038941

Reviewed by Tim Horton.

Some old iOS code implemented tiling of 1px wide/tall images via a stretch, rather than a tile.
It turns out that this is about 4x faster on modern macOS hardware too, so let's use it on all
platforms.

* LayoutTests/imported/w3c/web-platform-tests/css/css-fill-stroke/paint-order-001.html: Increase tolerance
by 1 pixel.
* LayoutTests/platform/mac-wk2/TestExpectations: Remove the above test.
* Source/WebCore/platform/graphics/Image.cpp:
(WebCore::Image::drawTiled):

Canonical link: https://commits.webkit.org/305528@main